<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/invite_item_margin_horizontal"
        android:layout_marginEnd="@dimen/invite_item_margin_horizontal"
        android:layout_marginBottom="@dimen/invite_item_margin_bottom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/invite_item_layout_margin">

            <TextView
                android:id="@+id/invite_item_chat_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_item_chat_name_example_text"
                android:textSize="@dimen/invite_item_chat_name_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/invite_item_buttons_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/invite_item_chat_name">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/invite_item_accept_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invite_item_accept_button_text"
                    android:textSize="@dimen/invite_item_buttons_text_size" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/invite_item_decline_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invite_item_decline_button_text"
                    android:textSize="@dimen/invite_item_buttons_text_size" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>