<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/room_item_card_horizontal_margin"
        android:layout_marginEnd="@dimen/room_item_card_horizontal_margin"
        android:layout_marginBottom="@dimen/small_margin"
        app:cardElevation="@dimen/card_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/room_item_layout_padding">

            <TextView
                android:id="@+id/room_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/room_item_title_margin_start"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/room_item_sample_title"
                android:textSize="@dimen/medium_title_text"
                android:clickable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/room_unread_messages_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/room_item_unread_messages_count_margin_end"
                android:elevation="@dimen/room_item_unread_messages_count_elevation"
                android:text="@string/unread_messages_count_example_text"
                android:textSize="@dimen/medium_title_text"
                app:layout_constraintEnd_toStartOf="@+id/room_more_button"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/room_more_button"
                android:layout_width="@dimen/room_item_more_button_resolution"
                android:layout_height="@dimen/room_item_more_button_resolution"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_expand_more_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/room_additional"
                android:layout_width="@dimen/constraint_layout_assign_res"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/room_item_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/room_invite_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_invite_button_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/room_remove_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_button_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>